[package]
name = "pos_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = {version =  "1.11.0", features = ["v4",] }
serde = { version = "1.0.216", features = ["derive"] }
validator = {version =  "0.19.0", features = ["derive"]  }
serde_json = "1.0.133"
axum-valid = "0.21.0"

